force-app/main/default/objects/PromptSetting__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>Name of the ApexClass to invoke in order to get the chat completion</description>
    <label>ApexClassName</label>
    <length>48</length>
    <type>Text</type>
</CustomField>