force-app/main/default/objects/PromptSetting__mdt/fields/Frequency_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Penalty__c</fullName>
    <description>Number between -2.0 and 2.0. Positive values penalize new tokens based on their existing frequency in the text so far, decreasing the model&apos;s likelihood to repeat the same line verbatim.</description>
    <label>Frequency Penalty</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>