force-app/main/default/objects/PromptSetting__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <description>The maximum number of tokens that can be generated in the completion.</description>
    <label>Max Tokens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>