force-app/main/default/objects/PromptSetting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>This field determines which model to use for making API Call.</description>
    <label>Named Credential</label>
    <length>50</length>
    <type>Text</type>
</CustomField>