force-app/main/default/objects/PromptSetting__mdt/fields/Presence_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Presence_Penalty__c</fullName>
    <description>Number between -2.0 and 2.0. Positive values penalize new tokens based on whether they appear in the text so far, increasing the model&apos;s likelihood to talk about new topics.</description>
    <label>Presence Penalty</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>