force-app/main/default/objects/PromptSetting__mdt/fields/Temprature__c.field-meta.xml
<CustomField>
    <fullName>Temprature__c</fullName>
    <description>The sampling temperature, between 0 and 1. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</description>
    <label>Temprature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>