force-app/main/default/objects/PromptSetting__mdt/fields/User_Instructions__c.field-meta.xml
<CustomField>
    <fullName>User_Instructions__c</fullName>
    <label>User Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>