force-app/main/default/objects/PromptSetting__mdt/listViews/All_data.listView-meta.xml
<ListView>
    <fullName>All_data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Named_Credential__c</columns>
    <columns>Frequency_Penalty__c</columns>
    <columns>Presence_Penalty__c</columns>
    <columns>Temprature__c</columns>
    <columns>Max_Tokens__c</columns>
    <columns>Top_P__c</columns>
    <columns>ApexClassName__c</columns>
    <columns>EndpointURL__c</columns>
    <columns>SObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All data</label>
    <language>en_US</language>
</ListView>