force-app/main/default/objects/PromptSetting__mdt/listViews/Metadata_Prompts.listView-meta.xml
<ListView>
    <fullName>Metadata_Prompts</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Named_Credential__c</columns>
    <columns>Top_P__c</columns>
    <columns>Temprature__c</columns>
    <columns>Max_Tokens__c</columns>
    <columns>IsActive__c</columns>
    <columns>Frequency_Penalty__c</columns>
    <filterScope>Everything</filterScope>
    <label>Metadata Prompts</label>
    <language>en_US</language>
</ListView>